HV-1577 Removed JAXB related code
- removed builders and supporting privileged actions
- removed beans generation from xsd
- added javax.xml.bind to forbidden APIs
- remove schema normalization