@@ -205,15 +205,7 @@
 
         <!-- Used to add further arguments to the arg line for specific sub-modules and profiles -->
         <maven-surefire-plugin.argLine></maven-surefire-plugin.argLine>
-        <maven-surefire-plugin.argLine.add-modules></maven-surefire-plugin.argLine.add-modules>
         <maven-surefire-plugin.argLine.add-opens></maven-surefire-plugin.argLine.add-opens>
-
-        <!--
-        Names of modules to be passed via "add-modules" option when forking java through Surefire and javadoc
-        plugins on Java 9
-        -->
-        <maven-surefire-plugin.jigsaw.modules>java.xml.bind</maven-surefire-plugin.jigsaw.modules>
-        <maven-javadoc-plugin.jigsaw.modules>java.xml.bind</maven-javadoc-plugin.jigsaw.modules>
 
         <!-- add-opens options required for Arquillian and WildFly -->
         <arquillian.javaVmArguments.add-opens></arquillian.javaVmArguments.add-opens>
@@ -700,7 +692,7 @@
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
-                        <argLine>${maven-surefire-plugin.argLine} ${maven-surefire-plugin.argLine.add-modules} ${maven-surefire-plugin.argLine.add-opens}</argLine>
+                        <argLine>${maven-surefire-plugin.argLine} ${maven-surefire-plugin.argLine.add-opens}</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -752,11 +744,6 @@
                     https://github.com/mojohaus/exec-maven-plugin/issues/75
                     -->
                     <version>1.5.0</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>jaxb2-maven-plugin</artifactId>
-                    <version>2.2</version>
                 </plugin>
                 <plugin>
                     <groupId>org.asciidoctor</groupId>
@@ -1139,7 +1126,6 @@
                 <jdk>[9,)</jdk>
             </activation>
             <properties>
-                <maven-surefire-plugin.argLine.add-modules>--add-modules=${maven-surefire-plugin.jigsaw.modules}</maven-surefire-plugin.argLine.add-modules>
                 <!--
                 All these add-opens are probably not necessary for our WildFly usage but add the ones defined in
                 https://github.com/ctomc/wildfly/commit/d8c4f55a1f900d931c224049c8a118ba4a5bcb45 to be on the safe side.
@@ -1168,16 +1154,13 @@
                             <artifactId>maven-compiler-plugin</artifactId>
                             <configuration>
                                 <fork>true</fork>
-                                <compilerArgs>
-                                    <arg>-J--add-modules=java.xml.ws.annotation</arg>
-                                </compilerArgs>
                             </configuration>
                         </plugin>
                         <plugin>
                             <artifactId>maven-surefire-plugin</artifactId>
                             <version>${maven-surefire-plugin.version}</version>
                             <configuration>
-                                <argLine>${maven-surefire-plugin.argLine} ${maven-surefire-plugin.argLine.add-modules} ${maven-surefire-plugin.argLine.add-opens}</argLine>
+                                <argLine>${maven-surefire-plugin.argLine} ${maven-surefire-plugin.argLine.add-opens}</argLine>
                             </configuration>
                         </plugin>
                         <plugin>
